Fix alignment of chip title

--- a/themes/area51/assets/scss/custom/chip.scss
+++ b/themes/area51/assets/scss/custom/chip.scss
@@ -70,7 +70,7 @@
     .chip-title {
         text-align: center;
         position: absolute;
-        bottom: .5em;
+        //bottom: .5em;
         font-size: .6em;
         width: 25em;
     }
@@ -85,6 +85,10 @@
     .chip-dip {
         height: 11.5em;
         top: -0.5em;
+    }
+
+    .chip-title {
+        top: 21em;
     }
 
     ol {
@@ -132,6 +136,10 @@
         top: -0.5em;
     }
 
+    .chip-title {
+        top: 27.5em;
+    }
+
     ol {
         li:nth-child(n):nth-child(-n+14) {
             text-align: right;
@@ -175,6 +183,10 @@
     .chip-dip {
         height: 22em;
         top: -0.5em;
+    }
+
+    .chip-title {
+        top: 38.5em;
     }
 
     ol {
